# shuttle-rocket-handlebars

./: Cargo.toml  README.md  Shuttle.toml
src/: main.rs
static/: posts.html.hbs
static/css/: style.css
templates/: posts.html.hbs
