[package]
name = "rocket_handlebars"
version = "0.1.0"
edition = "2021"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]

[dependencies]
handlebars = "5.1.2"
tokio = { version = "1.33.0", features = ["full"] }
rocket = { version = "0.5.0", features = ["json"] }
anyhow = "1.0.81"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
shuttle-rocket = "0.44.0"
shuttle-runtime = "0.44.0"
